# layered-atn

./: Achem's Razor.md  LATN.md  README.md  pyproject.toml
latn/: __init__.py
latn/An_N_Space_Model/: __init__.py  vector_dimensions.py  vocabulary.py
latn/atn/: core.py  np.py  pp.py  sentence.py  sq.py  subnet_np.py  subnet_pp.py  subnet_sentence.py  subnet_vp.py  vp.py
latn/lexer/: diagnostics.py  hypothesis.py  latn_layer_executor.py  latn_tokenizer.py  latn_tokenizer_layer1.py  latn_tokenizer_layer3.py  lexicon.py  literal_decoder.py  scene_adapter.py  semantic_grounding_layer2.py  semantic_grounding_layer3.py  semantic_grounding_layer4.py  semantic_grounding_layer5.py  sp_policy.py  spatial_policy.py  token_stream.py  vector_space.py  vocabulary_builder.py  vp_policy.py
latn/pos/: __init__.py  conjunction_phrase.py  noun_phrase.py  prepositional_phrase.py  question_phrase.py  sentence_phrase.py  verb_phrase.py
latn/utils/: adjective_inflector.py  contractions.py  debug.py  deprecation.py  deprecation_scanner.py  noun_inflector.py  predicates.py  spatial_validation.py  verb_inflector.py
tests/: __init__.py  test_contractions.py  test_diagnostics.py
tests/latn/: conftest.py  support.py  test_dimension_registration.py  test_import_boundary.py  test_lexicon_injection.py  test_neutral_support.py  test_proper_noun_np.py  test_scene_adapter_contract.py  test_spatial_policy_injection.py  test_vp_policy_injection.py
tests/latn/layer1/: __init__.py  test_comparative_superlative.py  test_latn_lexical_layer.py  test_noun_inflector.py  test_tokenization.py  (+2 more)
(+16 files in other folders)
