[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "latn"
version = "0.1.0"
description = "Layered ATN natural-language parser (extracted from Engraf)."
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["latn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
